# ComfyUI_UltraFlux

./: .gitignore  README.md  Ultraflux_node.py  __init__.py  inf_ultraflux.py  model_loader_utils.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
UltraFlux-v1/: model_index.json
UltraFlux-v1/scheduler/: scheduler_config.json
UltraFlux-v1/transformer/: config.json
example_workflows/: ultraflux.json
ultraflux/: autoencoder_kl.py  lora_pipeline.py  pipeline_flux.py  transformer_flux_visionyarn.py  vae.py
